Refactor RedisClientService to get more generic